--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@
 
 @font-face {
     font-family: 'Header';
-    src: url(UniNeue-Trial-Regular.ttf);
+    src: url(/UniNeue-Trial-Regular.ttf);
 
     font-family: 'New';
-    src: url(Vogue.ttf);
+    src: url(/Vogue.ttf);
 }
 
 @font-face {
